--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@types/react-slick": "^0.23.13",
     "next": "14.1.0",
     "next-compose-plugins": "^2.2.1",
@@ -16,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
