--- a/package.json
+++ b/package.json
@@ -9,24 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@expo/next-adapter": "^6.0.0",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@types/react-slick": "^0.23.13",
+    "file-loader": "^6.2.0",
     "next": "14.1.0",
     "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.5",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "css-loader": "^7.1.1",
     "postcss": "^8",
     "sass": "^1.70.0",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
