--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
     "next-transpile-modules": "^10.0.1",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.1",
@@ -29,12 +31,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.1",
-    "postcss": "^8",
-    "sass": "^1.70.0",
+    "postcss": "^8.4.38",
+    "sass": "^1.77.0",
+    "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
