--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "beuty-experts",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,7 +13,7 @@
     "@pbe/react-yandex-maps": "^1.2.5",
     "@types/react-slick": "^0.23.13",
     "file-loader": "^6.2.0",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.5",
@@ -22,7 +22,8 @@
     "postcss-loader": "^8.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-slick": "^0.30.1",
+    "react-slick": "^0.30.2",
+    "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1",
     "url-loader": "^4.1.1"
@@ -33,15 +34,12 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.1",
-    "postcss": "^8.4.38",
+    "nextjs-node-loader": "^1.1.5",
+    "postcss": "^8",
     "sass": "^1.77.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "postcss.config.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
